--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "jquery": "^3.3.1",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "webpack": "^3.5.4"
